--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "browserify src/index.coffee --transform coffeeify --extension='.coffee' -g uglifyify | uglifyjs --mangle --compress dead_code,sequences,conditionals,booleans,unused,if_return,join_vars,drop_debugger > public/bundle.js",
-    "dev": "src/server/dev.coffee",
-    "publish": "npm run build && bin/publish",
-    "watch": "nodemon --watch src --watch public/index.html  --watch public/styles --exec 'browserify' src/index.coffee --transform coffeeify --extension='.coffee' --outfile public/bundle.js"
+    "build": "npm run create > dist/index.html",
+    "create": "bin/create",
+    "publish": "npm run build && bin/publish"
   },
   "dependencies": {},
   "devDependencies": {
